--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "name": "Xasanov Javohir",
     "url": "https://portfoliowebapp.vercel.app"
   },
+  "type": "commonjs",
   "publisher": "Vercel",
   "scripts": {
     "dev": "next dev",
@@ -17,7 +18,8 @@
     "preview": "next build && next start",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
+    "lighthouse": "lighthouse --plugins=lighthouse-plugin-amp --view http://localhost:8080"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
